--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,6 +5,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "gh-pages": "^3.2.3",
     "mdbootstrap": "^4.20.0",
     "mdbreact": "^5.2.0",
     "pretty": "^2.0.0",
@@ -18,7 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "homepage": "https://myusername.github.io/react-app"
   },
   "eslintConfig": {
     "extends": [
